Fix 1px shift in bookmark image

--- a/media/common/css/menu_items.css
+++ b/media/common/css/menu_items.css
@@ -70,15 +70,6 @@
     background-position: -44px 0px !important;
 }
 
-#bookmarks_menu a:hover {
-    cursor: pointer;
-    background-position: -45px 0px !important;
-}
-
-#bookmarks_menu a:hover {
-    background-position: -45px 0px !important;
-}
-
 .menu_items li.item a.close {
     background:none !important;
     position:absolute;
